syntax = "proto3";

package api;

option go_package = "github.com/hatlonely/go-rpc/rpc-cicd/api/gen/go/api";

import "google/api/annotations.proto";
import "gogoproto/gogo.proto";
option (gogoproto.goproto_unkeyed_all) = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_sizecache_all) = false;

message Template {
  message ScriptTemplate {
    string language = 1;
    string script = 2;
  }

  string id = 1 [(gogoproto.moretags) = "bson:\"_id,omitempty\""];
  string name = 2 [(gogoproto.moretags) = "bson:\"name,omitempty\""];
  string description = 3 [(gogoproto.moretags) = "bson:\"description,omitempty\""];
  string type = 4 [(gogoproto.moretags) = "bson:\"type,omitempty\""];
  string category = 5 [(gogoproto.moretags) = "bson:\"category,omitempty\""];
  int32 createAt = 6 [(gogoproto.moretags) = "bson:\"createAt,omitempty\""];
  int32 updateAt = 7 [(gogoproto.moretags) = "bson:\"updateAt,omitempty\""];
  ScriptTemplate scriptTemplate = 8 [(gogoproto.moretags) = "bson:\"scriptTemplate,omitempty\""];
}

message GetTemplateReq {
  string id = 1;
}

message GetTemplatesReq {
  repeated string ids = 1;
}

message DelTemplateReq {
  string id = 1;
}

message DelTemplateRes {
  string id = 1;
}

message PutTemplateReq {
  Template template = 1;
}

message PutTemplateRes {
  string id = 1;
}

message UpdateTemplateReq {
  Template template = 1;
}

message UpdateTemplateRes {
  string id = 1;
}

message ListTemplateReq {
  int64 offset = 1;
  int64 limit = 2;
  bool brief = 3;
}

message ListTemplateRes {
  repeated Template templates = 1;
}

message Variable {
  string id = 1 [(gogoproto.moretags) = "bson:\"_id,omitempty\""];
  string name = 2 [(gogoproto.moretags) = "bson:\"name,omitempty\""];
  string description = 3 [(gogoproto.moretags) = "bson:\"description,omitempty\""];
  string kvs = 4 [(gogoproto.moretags) = "bson:\"kvs,omitempty\""];
  int32 createAt = 5 [(gogoproto.moretags) = "bson:\"createAt,omitempty\""];
  int32 updateAt = 6 [(gogoproto.moretags) = "bson:\"updateAt,omitempty\""];
}

message GetVariableReq {
  string id = 1;
}

message GetVariablesReq {
  repeated string ids = 1;
}

message DelVariableReq {
  string id = 1;
}

message DelVariableRes {
  string id = 1;
}

message PutVariableReq {
  Variable variable = 1;
}

message PutVariableRes {
  string id = 1;
}

message UpdateVariableReq {
  Variable variable = 1;
}

message UpdateVariableRes {
  string id = 1;
}

message ListVariableReq {
  int64 offset = 1;
  int64 limit = 2;
  bool brief = 3;
}

message ListVariableRes {
  repeated Variable variables = 1;
}

message Task {
  string id = 1 [(gogoproto.moretags) = "bson:\"_id,omitempty\""];
  string name = 2 [(gogoproto.moretags) = "bson:\"name,omitempty\""];
  string description = 3 [(gogoproto.moretags) = "bson:\"description,omitempty\""];
  repeated string templateIDs = 4 [(gogoproto.moretags) = "bson:\"templateIDs,omitempty\""];
  repeated string variableIDs = 5 [(gogoproto.moretags) = "bson:\"variableIDs,omitempty\""];
  int32 createAt = 6 [(gogoproto.moretags) = "bson:\"createAt,omitempty\""];
  int32 updateAt = 7 [(gogoproto.moretags) = "bson:\"updateAt,omitempty\""];
}

message GetTaskReq {
  string id = 1;
}

message DelTaskReq {
  string id = 1;
}

message DelTaskRes {
  string id = 1;
}

message PutTaskReq {
  Task task = 1;
}

message PutTaskRes {
  string id = 1;
}

message UpdateTaskReq {
  Task task = 1;
}

message UpdateTaskRes {
  string id = 1;
}

message ListTaskReq {
  int64 offset = 1;
  int64 limit = 2;
  bool brief = 3;
}

message ListTaskRes {
  repeated Task tasks = 1;
}

message Job {
  message Sub {
    string templateID = 1 [(gogoproto.moretags) = "bson:\"templateID,omitempty\""];
    string templateName = 2 [(gogoproto.moretags) = "bson:\"templateName,omitempty\""];
    string status = 3 [(gogoproto.moretags) = "bson:\"status,omitempty\""];
    string language = 4 [(gogoproto.moretags) = "bson:\"language,omitempty\""];
    string script = 5 [(gogoproto.moretags) = "bson:\"script,omitempty\""];
    int32 exitCode = 6 [(gogoproto.moretags) = "bson:\"exitCode,omitempty\""];
    string stdout = 7 [(gogoproto.moretags) = "bson:\"stdout,omitempty\""];
    string stderr = 8 [(gogoproto.moretags) = "bson:\"stderr,omitempty\""];
    int32 elapseSeconds = 9 [(gogoproto.moretags) = "bson:\"elapseSeconds,omitempty\""];
    int32 updateAt = 10 [(gogoproto.moretags) = "bson:\"updateAt,omitempty\""];
  }

  string id = 1 [(gogoproto.moretags) = "bson:\"_id,omitempty\""];
  int32 seq = 2 [(gogoproto.moretags) = "bson:\"seq,omitempty\""];
  string taskID = 3 [(gogoproto.moretags) = "bson:\"taskID,omitempty\""];
  string taskName = 4 [(gogoproto.moretags) = "bson:\"taskName,omitempty\""];
  string status = 5 [(gogoproto.moretags) = "bson:\"status,omitempty\""];
  string error = 6 [(gogoproto.moretags) = "bson:\"error,omitempty\""];
  int32 createAt = 7 [(gogoproto.moretags) = "bson:\"createAt,omitempty\""];
  int32 updateAt = 8 [(gogoproto.moretags) = "bson:\"updateAt,omitempty\""];
  int32 scheduleAt = 9 [(gogoproto.moretags) = "bson:\"scheduleAt,omitempty\""];
  int32 elapseSeconds = 10 [(gogoproto.moretags) = "bson:\"elapseSeconds,omitempty\""];
  repeated Sub subs = 11 [(gogoproto.moretags) = "bson:\"subs,omitempty\""];
}

message RunTaskReq {
  string taskID = 1;
}

message RunTaskRes {
  string jobID = 1;
}

message GetJobReq {
  string id = 1;
}

message DelJobReq {
  string id = 1;
}

message DelJobRes {
  string id = 1;
}

message ListJobReq {
  int64 offset = 1;
  int64 limit = 2;
  string taskID = 3;
}

message ListJobRes {
  repeated Job jobs = 1;
}

service CICDService {
  rpc RunTask(RunTaskReq) returns (RunTaskRes) {
    option (google.api.http) = {
      post: "/v1/runTask"
      body: "*"
    };
  }

  rpc GetTemplates(GetTemplatesReq) returns (ListTemplateRes) {
    option (google.api.http) = {
      post: "/v1/getTemplates"
      body: "*"
    };
  }

  rpc GetVariables(GetVariablesReq) returns (ListVariableRes) {
    option (google.api.http) = {
      post: "/v1/getVariables"
      body: "*"
    };
  }

  rpc GetJob(GetJobReq) returns (Job) {
    option (google.api.http) = {
      get: "/v1/job/{id}"
    };
  }

  rpc DelJob(DelJobReq) returns (DelJobRes) {
    option (google.api.http) = {
      delete: "/v1/job/{id}"
    };
  }

  rpc ListJob(ListJobReq) returns (ListJobRes) {
    option (google.api.http) = {
      get: "/v1/job"
    };
  }

  rpc GetTask(GetTaskReq) returns (Task) {
    option (google.api.http) = {
      get: "/v1/task/{id}"
    };
  }

  rpc DelTask(DelTaskReq) returns (DelTaskRes) {
    option (google.api.http) = {
      delete: "/v1/task/{id}"
    };
  }

  rpc PutTask(PutTaskReq) returns (PutTaskRes) {
    option (google.api.http) = {
      post: "/v1/task"
      body: "task"
    };
  }

  rpc UpdateTask(UpdateTaskReq) returns (UpdateTaskRes) {
    option (google.api.http) = {
      put: "/v1/task/{task.id}"
      body: "task"
    };
  }

  rpc ListTask(ListTaskReq) returns (ListTaskRes) {
    option (google.api.http) = {
      get: "/v1/task"
    };
  }

  rpc GetTemplate(GetTemplateReq) returns (Template) {
    option (google.api.http) = {
      get: "/v1/template/{id}"
    };
  }

  rpc DelTemplate(DelTemplateReq) returns (DelTemplateRes) {
    option (google.api.http) = {
      delete: "/v1/template/{id}"
    };
  }

  rpc PutTemplate(PutTemplateReq) returns (PutTemplateRes) {
    option (google.api.http) = {
      post: "/v1/template"
      body: "template"
    };
  }

  rpc UpdateTemplate(UpdateTemplateReq) returns (UpdateTemplateRes) {
    option (google.api.http) = {
      put: "/v1/template/{template.id}"
      body: "template"
    };
  }

  rpc ListTemplate(ListTemplateReq) returns (ListTemplateRes) {
    option (google.api.http) = {
      get: "/v1/template"
    };
  }

  rpc GetVariable(GetVariableReq) returns (Variable) {
    option (google.api.http) = {
      get: "/v1/variable/{id}"
    };
  }

  rpc DelVariable(DelVariableReq) returns (DelVariableRes) {
    option (google.api.http) = {
      delete: "/v1/variable/{id}"
    };
  }

  rpc PutVariable(PutVariableReq) returns (PutVariableRes) {
    option (google.api.http) = {
      post: "/v1/variable"
      body: "variable"
    };
  }

  rpc UpdateVariable(UpdateVariableReq) returns (UpdateVariableRes) {
    option (google.api.http) = {
      put: "/v1/variable/{variable.id}"
      body: "variable"
    };
  }

  rpc ListVariable(ListVariableReq) returns (ListVariableRes) {
    option (google.api.http) = {
      get: "/v1/variable"
    };
  }
}

